projeto quitanda - corrige icones na pagina carrinho.html

--- a/quitanda/carrinho.html
+++ b/quitanda/carrinho.html
@@ -129,14 +129,20 @@
                                 class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-down"></use>
+                                        </svg>
                                     </button>
                                     <input type="text" class="form-control text-center border-dark" value="4">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-up" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-up"></use>
+                                        </svg>
                                     </button>
                                     <button class="btn btn-outline-danger border-dark btn-sm" type="button">
-                                        <i class="bi-trash" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#trash"></use>
+                                        </svg>
                                     </button>
                                 </div>
                                 <div class="text-end mt-2">
@@ -166,14 +172,20 @@
                                 class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-down"></use>
+                                        </svg>
                                     </button>
                                     <input type="text" class="form-control text-center border-dark" value="4">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-up" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-up"></use>
+                                        </svg>
                                     </button>
                                     <button class="btn btn-outline-danger border-dark btn-sm" type="button">
-                                        <i class="bi-trash" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#trash"></use>
+                                        </svg>
                                     </button>
                                 </div>
                                 <div class="text-end mt-2">
@@ -203,14 +215,20 @@
                                 class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-down"></use>
+                                        </svg>
                                     </button>
                                     <input type="text" class="form-control text-center border-dark" value="4">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
-                                        <i class="bi-caret-up" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#caret-up"></use>
+                                        </svg>
                                     </button>
                                     <button class="btn btn-outline-danger border-dark btn-sm" type="button">
-                                        <i class="bi-trash" style="font-size: 16px; line-height: 16px;"></i>
+                                        <svg class="bi" width="24" height="24" fill="currentColor">
+                                            <use xlink:href="/bi.svg#trash"></use>
+                                        </svg>
                                     </button>
                                 </div>
                                 <div class="text-end mt-2">
