--- a/quitanda/cliente_dados.html
+++ b/quitanda/cliente_dados.html
@@ -52,7 +52,9 @@
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                                     title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <svg class="bi" width="24" height="24" fill="currentColor">
+                                        <use xlink:href="/bi.svg#cart3"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
@@ -62,7 +64,74 @@
         </nav>
 
         <main class="flex-fill">
-           
+            <div class="container">
+                <h1>Minha Conta</h1>
+                <div class="row gx-3">
+                    <div class="col-4">
+                        <div class="list-group">
+                             <a href="cliente_dados.html"
+                                class="list-group-item list-group-item-action bg-danger text-light">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#person"></use>
+                                </svg>
+                                Dados Pessoais
+                            </a>
+                            <a href="cliente_contatos.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#mailbox"></use>
+                                </svg>
+                                Contatos
+                            </a>
+                            <a href="cliente_endereco.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#house-door"></use>
+                                </svg>
+                                Endereço
+                            </a>
+                            <a href="cliente_pedidos.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#truck"></use>
+                                </svg>
+                                Pedidos
+                            </a>
+                            <a href="cliente_favoritos.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#heart"></use>
+                                </svg>
+                                Favoritos
+                            </a>
+                            <a href="cliente_senha.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#lock"></use>
+                                </svg>
+                                Alterar Senha
+                            </a>
+                            <a href="index.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#door-open"></use>
+                                </svg>
+                                Sair
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <form action="">
+                            <div class="form-floating mb-3">
+                                <input class="form-control" type="text" id="txtNome" placeholder=" " autofocus />
+                                <label for="txtNome">Nome</label>
+                            </div>
+                            <div class="form-floating mb-3 col-md-6 col-xl-4">
+                                <input class="form-control" type="text" id="txtCPF" placeholder=" " />
+                                <label for="txtCPF">CPF</label>
+                            </div>
+                            <div class="form-floating mb-3 col-md-6 col-xl-4">
+                                <input class="form-control" type="date" id="txtDataNascimento" placeholder=" " />
+                                <label for="txtDataNascimento">Data de Nascimento</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer class="border-top text-muted bg-light mt-auto">
