--- a/quitanda/cliente_endereco.html
+++ b/quitanda/cliente_endereco.html
@@ -18,6 +18,7 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 
+    <title>Quitanda Online :: Área do Cliente :: Endereço</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
