projeto quitanda - corrige icones na pagina cliente_endereco.html

--- a/quitanda/cliente_endereco.html
+++ b/quitanda/cliente_endereco.html
@@ -52,7 +52,9 @@
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                                     title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <svg class="bi" width="24" height="24" fill="currentColor">
+                                        <use xlink:href="/bi.svg#cart3"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
@@ -67,27 +69,48 @@
                 <div class="row gx-3">
                     <div class="col-4">
                         <div class="list-group">
-                            <a href="cliente_dados.html" class="list-group-item list-group-item-action">
-                                <i class="bi-person fs-6"></i> Dados Pessoais
+                            <a href="cliente_dados.html"
+                                class="list-group-item list-group-item-action bg-danger text-light">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#person"></use>
+                                </svg>
+                                Dados Pessoais
                             </a>
                             <a href="cliente_contatos.html" class="list-group-item list-group-item-action">
-                                <i class="bi-mailbox fs-6"></i> Contatos
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#mailbox"></use>
+                                </svg>
+                                Contatos
                             </a>
-                            <a href="cliente_endereco.html"
-                                class="list-group-item list-group-item-action bg-danger text-light">
-                                <i class="bi-house-door fs-6"></i> Endereço
+                            <a href="cliente_endereco.html" class="list-group-item list-group-item-action">
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#house-door"></use>
+                                </svg>
+                                Endereço
                             </a>
                             <a href="cliente_pedidos.html" class="list-group-item list-group-item-action">
-                                <i class="bi-truck fs-6"></i> Pedidos
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#truck"></use>
+                                </svg>
+                                Pedidos
                             </a>
                             <a href="cliente_favoritos.html" class="list-group-item list-group-item-action">
-                                <i class="bi-heart fs-6"></i> Favoritos
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#heart"></use>
+                                </svg>
+                                Favoritos
                             </a>
                             <a href="cliente_senha.html" class="list-group-item list-group-item-action">
-                                <i class="bi-lock fs-6"></i> Alterar Senha
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#lock"></use>
+                                </svg>
+                                Alterar Senha
                             </a>
                             <a href="index.html" class="list-group-item list-group-item-action">
-                                <i class="bi-door-open fs-6"></i> Sair
+                                <svg class="bi" width="24" height="24" fill="currentColor">
+                                    <use xlink:href="/bi.svg#door-open"></use>
+                                </svg>
+                                Sair
                             </a>
                         </div>
                     </div>
