--- a/quitanda/cliente_pedidos.html
+++ b/quitanda/cliente_pedidos.html
@@ -73,37 +73,44 @@
                                 class="list-group-item list-group-item-action bg-danger text-light">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#person"></use>
-                                </svg>Dados Pessoais
+                                </svg>
+                                Dados Pessoais
                             </a>
                             <a href="cliente_contatos.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#mailbox"></use>
-                                </svg>Contatos
+                                </svg>
+                                Contatos
                             </a>
                             <a href="cliente_endereco.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#house-door"></use>
-                                </svg>Endereço
+                                </svg>
+                                Endereço
                             </a>
                             <a href="cliente_pedidos.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#truck"></use>
-                                </svg>Pedidos
+                                </svg>
+                                Pedidos
                             </a>
                             <a href="cliente_favoritos.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#heart"></use>
-                                </svg>Favoritos
+                                </svg>
+                                Favoritos
                             </a>
                             <a href="cliente_senha.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#lock"></use>
-                                </svg>Alterar Senha
+                                </svg>
+                                Alterar Senha
                             </a>
                             <a href="index.html" class="list-group-item list-group-item-action">
                                 <svg class="bi" width="24" height="24" fill="currentColor">
                                     <use xlink:href="/bi.svg#door-open"></use>
-                                </svg>Sair
+                                </svg>
+                                Sair
                             </a>
                         </div>
                     </div>
@@ -481,7 +488,7 @@
             </div>
         </footer>
     </div>
-    
+
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
