--- a/quitanda/fechamento_pedido.html
+++ b/quitanda/fechamento_pedido.html
@@ -17,6 +17,8 @@
 
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
+
+    <title>Quitanda Online :: Fechamento da Compra</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
