--- a/quitanda/fechamento_pedido.html
+++ b/quitanda/fechamento_pedido.html
@@ -64,8 +64,24 @@
             </div>
         </nav>
 
-        <main class="flex-fill">
 
+        <main class="flex-fill">
+            <div class="container text-center">
+            <h1>Obrigado!</h1>
+            <hr>
+            <h3>Anote o número de seu pedido:</h3>
+            <h2 class="text-danger"><b>004571</b></h2>
+            <p>Em até 2 horas, seu pedido será entregue. Qualquer dúvida sobre este pedido, entre em contato conosco
+                e informe o número do pedido para que possamos te ajudar.</p>
+            <p>Tenha um ótimo dia!</p>
+            <p>
+                Atenciosamente,<br>
+                Equipe Quitanda Online
+            </p>
+            <p>
+                <a href="index.html" class="btn btn-danger btn-lg">Voltar à Página Principal</a>
+            </p>
+            </div>
         </main>
 
         <footer class="border-top text-muted bg-light mt-auto">
