projeto quitanda - adiciona title em privcidade.html

--- a/quitanda/privacidade.html
+++ b/quitanda/privacidade.html
@@ -17,6 +17,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+        <title>Quitanda Online :: Política de Privacidade</title>
 </head>
 
 <body style="min-width: 372px;">
