--- a/quitanda/trocas.html
+++ b/quitanda/trocas.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Quitanda Online</title>
+    <title>Quitanda Online :: Política de Trocas e Devoluções</title>
 </head>
 
 <body style="min-width: 372px;">
