projeto quitanda - formata index.html

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -147,7 +147,7 @@
             <div class="row g-3">
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart-fill"></use>
                             </svg>
@@ -228,7 +228,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart-fill"></use>
                             </svg>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -336,7 +336,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart-fill"></use>
                             </svg>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -390,7 +390,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart-fill"></use>
                             </svg>
@@ -417,7 +417,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -444,7 +444,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
                     <div class="card text-center bg-light">
-                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                        <a href="#" class="position-absolute right-0 p-2 text-danger">
                             <svg class="bi" width="24" height="24" fill="currentColor">
                                 <use xlink:href="/bi.svg#suit-heart"></use>
                             </svg>
@@ -470,10 +470,10 @@
                     </div>
                 </div>
             </div>
-            <hr class="mt-3" >
+            <hr class="mt-3">
             <div class="row pb-4">
                 <div class="col-12">
-                
+
                     <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
                         <form class="d-inline-block">
                             <select class="form-select form-select-sm">
@@ -502,7 +502,7 @@
                             </ul>
                         </nav>
                     </div>
-                
+
                 </div>
             </div>
         </div>
@@ -528,7 +528,8 @@
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
                     <a href="contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
-                    E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a>
+                    E-mail: <a href="mailto:email@dominio.com"
+                        class="text-decoration-none text-dark">email@dominio.com</a>
                     Telefone: <a href="phone:2899999999" class="text-decoration-none text-dark">(28) 99999-99999</a>
                 </div>
             </div>
