--- a/quitanda/cadastrarnovasenha.html
+++ b/quitanda/cadastrarnovasenha.html
@@ -41,10 +41,11 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="cadastro.html" class="nav-link text-white">Quero Me Cadastrar</a>
+                                <a href="cliente_pedidos.html" class="nav-link text-white">Logado como <b>Ricardo
+                                        Maroquio</b></a>
                             </li>
                             <li class="nav-item">
-                                <a href="login.html" class="nav-link text-white">Entrar</a>
+                                <a href="login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
