projeto quitanda - coloca css em arquivo externo em index.html

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -16,15 +16,8 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <style>
-        p.truncate-3l {
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Quitanda Online :: Página Principal</title>
 </head>
 
