--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -16,7 +16,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Quitanda Online :: Página Principal</title>
 </head>
